refactor(post endpoint) change functionality
To meet new architecture post endpoint and others was changed for just to receive transactions from accounts and credits.
